# workspace-docs-mcp

./: .editorconfig  CONTRIBUTING.md  GPT_PRO_PROMPT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
catalog/: locator.config.yml
docs/: AGENT_INSTALL.md  agent-setup.md
prompts/: AGENTS.addendum.md  agent-usage.md  claude-desktop-config.example.json  codex-config.example.toml
scripts/: install.ps1  install.sh
tests/: test_catalog_search.py  test_freshness.py  test_local_bge_backend.py
workspace_docs_mcp/: catalog.py  cli.py  config.py  doctor.py  freshness.py  index_worker.py  mcp_server.py  search.py  source_index.py  vector.py
